--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style/style.css">
   <title>Clone Linktree</title>
 </head>
-<body>
+<body onload="moveIcons()">
   <div class="container">
     <div class="profile">
       <img class="photo" src="assets/profile-photo.png" alt="Imagem de perfil">
-      <h4 class="profile-name">@kauanteixeira</h4>
+      <h1 class="profile-name">@kauanteixeira</h1>
+      <div class="links-profile">
+        <a class="icons" href="mailto:kauant.henrique@gmail.com"><i class="fa fa-envelope"></i></a>
+        <a class="icons" href="https://www.linkedin.com/in/kauan-henrique-317b32219/"><i class="fa fa-linkedin"></i></a>
+      </div>
     </div>
     <div class="links">
       <a href="https://github.com/kauanteixeira" target="_blank">GitHub</a>
@@ -19,5 +24,6 @@
       <a href="https://www.instagram.com/kauanteixeira_" target="_blank">Instagram</a>
     </div>
   </div>
+  <script src="script/app.js"></script>
 </body>
 </html>
