--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="style/style.css">
   <title>Clone Linktree</title>
 </head>
-<body onload="moveIcons()">
+<body>
   <div class="container">
     <div class="profile">
-      <img class="photo" src="assets/profile-photo.png" alt="Imagem de perfil">
+      <img loading="lazy" class="photo" src="assets/profile-photo.png" alt="Imagem de perfil">
       <h1 class="profile-name">@kauanteixeira</h1>
+      <div class="lives-in">
+        <i class="material-icons">location_on</i>
+        Franca, São Paulo
+      </div>
       <div class="links-profile">
         <a class="icons" href="mailto:kauant.henrique@gmail.com"><i class="fa fa-envelope"></i></a>
         <a class="icons" href="https://www.linkedin.com/in/kauan-henrique-317b32219/"><i class="fa fa-linkedin"></i></a>
+        <a class="icons" href="https://github.com/kauanteixeira"><i class="fa fa-github"></i></a>
+        <a class="icons" href="margin: 0.5rem 0.5rem 0 0.5rem;"><i class="fa fa-twitter"></i></a>
       </div>
     </div>
     <div class="links">
-      <a href="https://github.com/kauanteixeira" target="_blank">GitHub</a>
-      <a href="https://twitter.com/kauanhent" target="_blank">Twitter</a>
-      <a href="https://www.instagram.com/kauanteixeira_" target="_blank">Instagram</a>
+      <a href="https://github.com/kauanteixeira" target="_blank"><i class="fa fa-github"></i>GitHub</a>
+      <a href="margin: 0.5rem 0.5rem 0 0.5rem;https://twitter.com/kauanhent" target="_blank"><i class="fa fa-twitter"></i>Twitter</a>
+      <a href="https://www.instagram.com/kauanteixeira_" target="_blank"><i class="fa fa-instagram"></i>Instagram</a>
     </div>
   </div>
   <script src="script/app.js"></script>
