--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="links">
       <a href="https://github.com/kauanteixeira" target="_blank"><i class="fa fa-github"></i>GitHub</a>
-      <a href="margin: 0.5rem 0.5rem 0 0.5rem;https://twitter.com/kauanhent" target="_blank"><i class="fa fa-twitter"></i>Twitter</a>
+      <a href="https://twitter.com/kauanhent" target="_blank"><i class="fa fa-twitter"></i>Twitter</a>
       <a href="https://www.instagram.com/kauanteixeira_" target="_blank"><i class="fa fa-instagram"></i>Instagram</a>
     </div>
   </div>
