--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Franca, São Paulo
       </div>
       <div class="links-profile">
-        <a class="icons" href="mailto:kauant.henrique@gmail.com"><i class="fa fa-envelope"></i></a>
+        <a class="icons" href="mailto:kauanteixeira.dev@hotmail.com"><i class="fa fa-envelope"></i></a>
         <a class="icons" href="https://www.linkedin.com/in/kauan-henrique-317b32219/"><i class="fa fa-linkedin"></i></a>
         <a class="icons" href="https://github.com/kauanteixeira"><i class="fa fa-github"></i></a>
         <a class="icons" href="margin: 0.5rem 0.5rem 0 0.5rem;"><i class="fa fa-twitter"></i></a>
